# libdebconf-kde

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Changelog  DebconfKDEConfig.cmake.in  Doxyfile  Messages.sh  README  README.md  TODO
cmake/modules/: CMakeLists.txt  DebconfKDEConfig.cmake
po/ar/: libdebconf-kde.po
po/ast/: libdebconf-kde.po
po/bs/: libdebconf-kde.po
po/ca/: libdebconf-kde.po
po/ca@valencia/: libdebconf-kde.po
po/cs/: libdebconf-kde.po
po/da/: libdebconf-kde.po
po/de/: libdebconf-kde.po
po/el/: libdebconf-kde.po
po/en_GB/: libdebconf-kde.po
po/eo/: libdebconf-kde.po
po/es/: libdebconf-kde.po
po/et/: libdebconf-kde.po
po/eu/: libdebconf-kde.po
po/fi/: libdebconf-kde.po
po/fr/: libdebconf-kde.po
po/ga/: libdebconf-kde.po
po/gl/: libdebconf-kde.po
po/he/: libdebconf-kde.po
po/hi/: libdebconf-kde.po
po/hu/: libdebconf-kde.po
po/id/: libdebconf-kde.po
po/it/: libdebconf-kde.po
po/ja/: libdebconf-kde.po
po/ka/: libdebconf-kde.po
po/ko/: libdebconf-kde.po
po/lt/: libdebconf-kde.po
po/mr/: libdebconf-kde.po
po/nb/: libdebconf-kde.po
po/nds/: libdebconf-kde.po
po/nl/: libdebconf-kde.po
po/nn/: libdebconf-kde.po
po/pl/: libdebconf-kde.po
po/pt/: libdebconf-kde.po
po/pt_BR/: libdebconf-kde.po
po/ro/: libdebconf-kde.po
po/ru/: libdebconf-kde.po
po/sk/: libdebconf-kde.po
po/sl/: libdebconf-kde.po
po/sv/: libdebconf-kde.po
po/th/: libdebconf-kde.po
po/tr/: libdebconf-kde.po
po/ug/: libdebconf-kde.po
po/uk/: libdebconf-kde.po
po/zh_CN/: libdebconf-kde.po
po/zh_TW/: libdebconf-kde.po
src/: CMakeLists.txt  DebconfBoolean.cpp  DebconfBoolean.h  DebconfBoolean.ui  DebconfElement.cpp  DebconfElement.h  DebconfError.cpp  DebconfError.h  DebconfError.ui  DebconfGui.cpp  DebconfGui.h  DebconfGui.ui  DebconfMultiselect.cpp  DebconfMultiselect.h  DebconfMultiselect.ui  DebconfNote.cpp  DebconfNote.h  DebconfNote.ui  DebconfPassword.cpp  DebconfPassword.h  DebconfPassword.ui  DebconfProgress.cpp  DebconfProgress.h  DebconfProgress.ui  DebconfSelect.cpp  DebconfSelect.h  DebconfSelect.ui  DebconfString.cpp  DebconfString.h  DebconfString.ui  DebconfText.cpp  DebconfText.h  DebconfText.ui  Debug.cpp  Debug_p.h  debconf.cpp  debconf.h
tools/: CMakeLists.txt  main.cpp
